--- a/css and html/index.html
+++ b/css and html/index.html
@@ -55,15 +55,20 @@
             </div>
         </section>
 
-        <section>
-            <p>© Copyright 2024 The Fruit</p>
-        </section>
+
     </main>
 
+    <footer>
+        <section class="copy">
+            <p>© Copyright 2024 The Fruit</p>
+        </section>
 
+    </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
+
 
 </html>
