--- a/css and html/about.html
+++ b/css and html/about.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sobre-lobby</title>
-    <link rel="stylesheet" href="about.css">
+    <title>lobby</title>
+    <link rel="stylesheet" href="home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <nav>
-            <img src="img/test.png" alt="">
+            <div>
+                <img src="img/logo.png" alt="">
+            </div>
 
-            <a href="index.html">HOME</a>
-            <a href="acai.html">AÇAÍ</a>
-            <a href="cupuacu.html">CUPUAÇU</a>
-            <a href="sobre.html">MORE ABOUT</a>
+            <div>
+                <a href="index.html">HOME</a>
+                <a href="acai.html">AÇAÍ</a>
+                <a href="cupuacu.html">CUPUAÇU</a>
+                <a href="sobre.html">MORE ABOUT</a>
+            </div>
+
+
         </nav>
     </header>
-    
+
     <main>
-        <div>
-            <h1>lets discovery more about the Fruit!</h1>
-        </div>
+        <section class="text-1">
+            <h1>Welcome to the açaí side</h1>
+            <p>here you'll find the best açaí in the internet</p>
+        </section>
+
     </main>
+
+    <footer>
+        <section class="copy">
+            <p>© Copyright 2024 The Fruit</p>
+        </section>
+
+    </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
+
+
 </html>
