--- a/css and html/acai.html
+++ b/css and html/acai.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lobby</title>
+    <title>THE FRUIT</title>
     <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -31,9 +31,32 @@
 
     <main>
         <section class="text-1">
-            <h1>Welcome to the açaí side</h1>
-            <p>here you'll find the best açaí in the internet</p>
+            <h1>Welcome to The Fruit</h1>
+            <p>the place you can buy the yummiest açaí and cupuaçu in the intire galaxy</p>
         </section>
+
+        <section>
+            <div class="text-2">
+                <h1>Chose your açaí!</h1>
+                <p></p>
+                <p></p>
+            </div>
+
+            <div class="img-sides">
+                <img class="img-slides-solo" src="img/acaiacomp-removebg-preview.png" alt="">
+                <img class="img-slides-solo" src="img/acaifrutas-removebg-preview.png" alt="">
+                <img class="img-slides-solo" src="img/acaicru-removebg-preview.png" alt="">
+            </div>
+        </section>
+
+        <section>
+            <div class="p-sides">
+                <p>with cereals, and powdered milk</p>
+                <p>the açaí side</p>
+                <p>the cupuaçu side</p>
+            </div>
+        </section>
+
 
     </main>
 
