--- a/css and html/acai.html
+++ b/css and html/acai.html
@@ -51,9 +51,9 @@
 
         <section>
             <div class="p-sides">
-                <p>with cereals, and powdered milk</p>
-                <p>the açaí side</p>
-                <p>the cupuaçu side</p>
+                <div><p>with cereals, and powdered milk</p></div>
+                <div><p>the açaí side</p></div>
+                <div><p>the cupuaçu side</p></div>
             </div>
         </section>
 
