--- a/css and html/about.html
+++ b/css and html/about.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE FRUIT</title>
-    <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <a href="index.html">HOME</a>
                 <a href="acai.html">AÇAÍ</a>
                 <a href="cupuacu.html">CUPUAÇU</a>
-                <a href="sobre.html">MORE ABOUT</a>
+                <a href="about.html">MORE ABOUT</a>
             </div>
 
 
@@ -31,10 +31,30 @@
 
     <main>
         <section class="text-1">
-            <h1>Learn more about The Fruit</h1>
-            <br>
-            <p>This web site was been created for educational purposes. Besides it has been inspired in a Star Wars theme</p>
+            <h1>Welcome to The Fruit</h1>
+            <p>the place you can buy the yummiest açaí and cupuaçu in the intire galaxy</p>
         </section>
+
+        <section>
+            <div class="text-2">
+                <h1>Chose your side!</h1>
+                <p>you have the afinity with the Fruit</p>
+                <p>CHOSE YOUR SIDE</p>
+            </div>
+
+            <div class="img-sides">
+                <a href="acai.html" class="img-slides-solo"><img src="img/acaiside.png" alt=""></a>
+                <a href="cupuacu.html" class="img-slides-solo"><img src="img/cupuacuside.png" alt=""></a>
+            </div>
+        </section>
+
+        <section>
+            <div class="a-sides">
+                <a href="acai.html">the açaí side</a>
+                <a href="cupuacu.html">the cupuaçu side</a>
+            </div>
+        </section>
+
 
     </main>
 
@@ -45,10 +65,10 @@
 
     </footer>
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 
 
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
