--- a/css and html/acai.html
+++ b/css and html/acai.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE FRUIT</title>
-    <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="acai.css">
 </head>
 
 <body>
@@ -31,29 +31,38 @@
 
     <main>
         <section class="text-1">
-            <h1>Welcome to The Fruit</h1>
-            <p>the place you can buy the yummiest açaí and cupuaçu in the intire galaxy</p>
+            <h1>Welcome to açaí side</h1>
+            <p>choose what you would like to order</p>
         </section>
 
-        <section>
-            <div class="text-2">
+        <section class="acai-conteiner">
+            <!-- <div class="text-2">
                 <h1>Chose your açaí!</h1>
                 <p></p>
                 <p></p>
-            </div>
+            </div> -->
 
             <div class="img-sides">
-                <img class="img-slides-solo" src="img/acaiacomp-removebg-preview.png" alt="">
-                <img class="img-slides-solo" src="img/acaifrutas-removebg-preview.png" alt="">
-                <img class="img-slides-solo" src="img/acaicru-removebg-preview.png" alt="">
+                <div>
+                    <a href=""><img class="img-slides-solo" src="img/acaiacomp-removebg-preview.png" alt=""></a>
+                    <div class="a-sides"><p>with cereals, and powdered milk</p></div>
+                </div>
+                <div>
+                    <a href=""><img class="img-slides-solo" src="img/acaifrutas-removebg-preview.png" alt=""></a>
+                    <div class="a-sides"><p>açaí without any other ingredients</p></div>
+                </div>
+                <div>
+                    <a href=""><img class="img-slides-solo" src="img/acaicru-removebg-preview.png" alt=""></a>
+                    <div class="a-sides"><p>açaí with cereals, powered milk and fruit</p></div>
+                </div>
             </div>
         </section>
 
         <section>
-            <div class="p-sides">
-                <div><p>with cereals, and powdered milk</p></div>
-                <div><p>the açaí side</p></div>
-                <div><p>the cupuaçu side</p></div>
+            <div class="a-sides">
+                <div class="p-sides"></div>
+                <div class="p-sides"></div>
+                <div class="p-sides"></div>
             </div>
         </section>
 
