--- a/css and html/cupuacu.html
+++ b/css and html/cupuacu.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE FRUIT</title>
-    <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="acai.css">
 </head>
 
 <body>
@@ -31,9 +31,37 @@
 
     <main>
         <section class="text-1">
-            <h1>Welcome to the cupuaçu side</h1>
-            <p>here you'll find the best cupuaçu in the internet</p>
+            <h1>Welcome to cupuaçu side</h1>
+            <p>choose what you would like to order</p>
         </section>
+
+        <section class="acai-conteiner">
+            <!-- <div class="text-2">
+                <h1>Chose your açaí!</h1>
+                <p></p>
+                <p></p>
+            </div> -->
+
+            <div class="img-sides">
+                <div>
+                    <a href=""><img class="img-slides-solo" src="img/cupuacuacai-removebg-preview.png" alt=""></a>
+                    <div class="a-sides"><p>cupuaçu with açai ice cream</p></div>
+                </div>
+                <div>
+                    <a href=""><img class="img-slides-solo" src="img/cupuacucru-removebg-preview.png" alt=""></a>
+                    <div class="a-sides"><p>cupuaçu without any other ingredients</p></div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="a-sides">
+                <div class="p-sides"></div>
+                <div class="p-sides"></div>
+                <div class="p-sides"></div>
+            </div>
+        </section>
+
 
     </main>
 
