--- a/css and html/index.html
+++ b/css and html/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE FRUIT</title>
-    <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <a href="index.html">HOME</a>
                 <a href="acai.html">AÇAÍ</a>
                 <a href="cupuacu.html">CUPUAÇU</a>
-                <a href="sobre.html">MORE ABOUT</a>
+                <a href="about.html">MORE ABOUT</a>
             </div>
 
 
