--- a/css and html/acai.html
+++ b/css and html/acai.html
@@ -22,7 +22,7 @@
                 <a href="index.html">HOME</a>
                 <a href="acai.html">AÇAÍ</a>
                 <a href="cupuacu.html">CUPUAÇU</a>
-                <a href="sobre.html">MORE ABOUT</a>
+                <a href="about.html">MORE ABOUT</a>
             </div>
 
 
