--- a/css and html/about.html
+++ b/css and html/about.html
@@ -8,7 +8,7 @@
     <title>THE FRUIT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
             <div class="text-2">
                 <h1>Chose your side!</h1>
                 <p>you have the afinity with the Fruit</p>
-                <p>CHOSE YOUR SIDE</p>
+                <p>PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP</p>
             </div>
 
             <div class="img-sides">
