--- a/css and html/about.html
+++ b/css and html/about.html
@@ -31,31 +31,18 @@
 
     <main>
         <section class="text-1">
-            <h1>Welcome to The Fruit</h1>
-            <p>the place you can buy the yummiest açaí and cupuaçu in the intire galaxy</p>
+            <h1>Let's learn more about The Fruit</h1>
         </section>
 
         <section>
             <div class="text-2">
-                <h1>Chose your side!</h1>
-                <p>you have the afinity with the Fruit</p>
-                <p>PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP</p>
+                <h1>Why does it has been created?</h1>
+                <p>The fruit has been created based in a Star Wars theme. It has created for educationals purposes</p>
             </div>
 
-            <div class="img-sides">
-                <a href="acai.html" class="img-slides-solo"><img src="img/acaiside.png" alt=""></a>
-                <a href="cupuacu.html" class="img-slides-solo"><img src="img/cupuacuside.png" alt=""></a>
-            </div>
         </section>
 
-        <section>
-            <div class="a-sides">
-                <a href="acai.html">the açaí side</a>
-                <a href="cupuacu.html">the cupuaçu side</a>
-            </div>
-        </section>
-
-
+       
     </main>
 
     <footer>
