the final last update

--- a/css and html/about.html
+++ b/css and html/about.html
@@ -38,6 +38,12 @@
             <div class="text-2">
                 <h1>Why does it has been created?</h1>
                 <p>The fruit has been created based in a Star Wars theme. It has created for educationals purposes</p>
+                <p>for more. follow us in our social media</p>
+                <div class="socialmedia">
+                    <a href="https://www.instagram.com/"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
+                    <a href="https://www.youtube.com/"><ion-icon name="logo-youtube" size="large"></ion-icon></a>
+                    <a href="https://pt-br.facebook.com/"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
+                </div>
             </div>
 
         </section>
