--- a/css and html/acai.html
+++ b/css and html/acai.html
@@ -49,11 +49,11 @@
                 </div>
                 <div>
                     <a href=""><img class="img-slides-solo" src="img/acaifrutas-removebg-preview.png" alt=""></a>
-                    <div class="a-sides"><p>açaí without any other ingredients</p></div>
+                    <div class="a-sides"><p>without any other ingredients</p></div>
                 </div>
                 <div>
                     <a href=""><img class="img-slides-solo" src="img/acaicru-removebg-preview.png" alt=""></a>
-                    <div class="a-sides"><p>açaí with cereals, powered milk and fruit</p></div>
+                    <div class="a-sides"><p>with cereals, powered milk and fruit</p></div>
                 </div>
             </div>
         </section>
